force-app/main/default/objects/RV_MRC_Header_Staging__c/RV_MRC_Header_Staging__c.object-meta.xml
<CustomObject>
    <label>MRC Header Staging</label>
    <nameField>
        <label>Master Reference Contract number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MRC Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>