force-app/main/default/objects/RV_MRC_Header_Staging__c/fields/Action_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Action_Indicator__c</fullName>
    <label>Action Indicator</label>
    <length>80</length>
    <type>Text</type>
</CustomField>