force-app/main/default/objects/RV_MRC_Header_Staging__c/fields/Customer_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Customer_Credit_Limit__c</fullName>
    <label>Customer (Sold-To) Credit Limit</label>
    <length>80</length>
    <type>Text</type>
</CustomField>