force-app/main/default/objects/RV_MRC_Header_Staging__c/fields/Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel__c</fullName>
    <label>Distribution Channel</label>
    <length>80</length>
    <type>Text</type>
</CustomField>