force-app/main/default/objects/RV_MRC_Header_Staging__c/fields/Sales_Document_type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Document_type__c</fullName>
    <label>Sales Document type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>