force-app/main/default/objects/RV_MRC_Header_Staging__c/fields/Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organization__c</fullName>
    <label>Sales Organization</label>
    <length>80</length>
    <type>Text</type>
</CustomField>