force-app/main/default/objects/RV_MRC_Header_Staging__c/fields/Ship_To_PO_type__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_PO_type__c</fullName>
    <label>Ship-To PO type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>