force-app/main/default/objects/RV_MRC_Header_Staging__c/fields/Ship_To_Primary_Sales_Repr__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Primary_Sales_Repr__c</fullName>
    <label>Ship-To Primary Sales Repr.</label>
    <length>80</length>
    <type>Text</type>
</CustomField>