force-app/main/default/objects/RV_MRC_Header_Staging__c/fields/Ship_To_Sales_Group__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Sales_Group__c</fullName>
    <label>Ship-To Sales Group</label>
    <length>80</length>
    <type>Text</type>
</CustomField>