force-app/main/default/objects/RV_MRC_Header_Staging__c/fields/Shipping_Condition__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Condition__c</fullName>
    <label>Shipping Condition</label>
    <length>80</length>
    <type>Text</type>
</CustomField>