force-app/main/default/objects/RV_MRC_Header_Staging__c/fields/Shipping_Condition_Description__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Condition_Description__c</fullName>
    <label>Shipping Condition Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>