force-app/main/default/objects/RV_MRC_Header_Staging__c/fields/Sold_To_Deletion_Flag_at_All_Areas__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Deletion_Flag_at_All_Areas__c</fullName>
    <label>Sold-To Deletion Flag at All Areas</label>
    <length>80</length>
    <type>Text</type>
</CustomField>