force-app/main/default/objects/RV_MRC_Header_Staging__c/fields/Sold_To_National_Account_Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_National_Account_Partner_Name__c</fullName>
    <label>Sold-To National Account Partner Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>