force-app/main/default/objects/RV_MRC_Header_Staging__c/fields/Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Valid_From__c</fullName>
    <label>Valid-From</label>
    <length>50</length>
    <type>Text</type>
</CustomField>