force-app/main/default/objects/RV_MRC_Header_Staging__c/fields/Valid_To__c.field-meta.xml
<CustomField>
    <fullName>Valid_To__c</fullName>
    <label>Valid-To</label>
    <length>50</length>
    <type>Text</type>
</CustomField>