force-app/main/default/objects/RV_MRC_Header_Staging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Action_Indicator__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Sales_Organization__c</columns>
    <columns>Ship_To__c</columns>
    <columns>Sold_To__c</columns>
    <columns>Sold_To_Deletion_Flag_at_All_Areas__c</columns>
    <columns>Sold_To_Deletion_Flag_at_Sales_Area__c</columns>
    <columns>Ship_To_Name__c</columns>
    <columns>Sold_To_Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Action_Indicator__c</field>
        <operation>equals</operation>
        <value>H</value>
    </filters>
    <label>All</label>
</ListView>